--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Ratchetnotclank/nasa#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "parcel": "^2.6.2"
   }
 }
